# markright

./: Makefile  markright.cabal  stack.yaml
libs/main/: Markright.hs
libs/main/Markright/: Ast.hs  Builder.hs  Prelude.hs  QuasiQuoterHelpers.hs
tests/tasty/: Main.hs
